// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_package = "ohos.devtools.datasources.transport.grpc.service";
option optimize_for = LITE_RUNTIME;

message Test {
    int32 number = 1;
    uint64 tv_nsec = 2;
    string name = 3;
    bool is_test = 4;
    enum State {
        INITED = 0;
        REGISTERED = 1;
    };
    State state = 5;
    oneof event {
        int32 alloc_event = 6;
        string free_event = 7;
    }
}

message CpuInfoTest {
    repeated Test test = 1;
}
message TestParser {
    int32 count = 1;
    CpuInfoTest cores = 2;
}
